<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.universidadcauca.movil.preguntame.Preguntas">


    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always"
        android:title="@string/menu_more"
        >
        <menu>
            <item android:id="@+id/action_about"
                android:title="@string/menu_about"
                />
            <item android:id="@+id/action_info"
                android:title="@string/menu_info"
                />

        </menu>

    </item>



</menu>
